--- a/public/style/index.css
+++ b/public/style/index.css
@@ -33,32 +33,6 @@
     --fonte-padrao: Arial, Helvetica, sans-serif;
 }
 
-.erro,
-.ssc {
-    padding: 5px 10px;
-    width: 80%;
-    margin: auto;
-    font-weight: bold;
-    font-family: Arial, Helvetica, sans-serif;
-    display: flex;
-    align-items: center;
-    justify-content: start;
-}
-.erro p, .ssc p{
-    padding: 0px;
-    margin: 0px;
-}
-
-.erro {
-    background-color: rgba(255, 0, 0, 0.386);
-    border-left: 7px solid red;
-    color: rgb(53, 0, 0);
-}
-.ssc{
-    background-color: rgba(90, 203, 90, 0.463);
-    border-left: 7px solid rgb(0, 210, 0);
-    color: rgb(0, 45, 0);
-}
 
 body {
     min-height: 100vh;
@@ -72,30 +46,28 @@ a {
 p{
     margin-bottom: 0px;
 }
-.whats {
+
+.img {
+    width: 100%;
+    height: calc(100% / 2);
+    margin: auto;
+}
+
+.img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.actualImg{
     display: flex;
     align-items: center;
-    justify-content: center;
-    width: 70px;
-    height: 70px;
-    border-radius: 50%;
-    position: fixed;
-    background-color: #32D851;
-    bottom: 20px;
-    right: 20px;
-    overflow: hidden;
-    border: 2px solid black;
+    justify-content: start;
+    max-width: 30%;
+    gap: 3px;
+    padding: 5px;
 }
-
-.whats img {
-    height: 70%;
-    width: 70%;
-}
-
-@media screen and (max-width: 768px) {
-    .whats {
-        width: 50px;
-        height: 50px;
-        z-index: 1;
-    }
+.actualImg .img{
+    width: 30% !important;
+    height: 30% !important;
 }
