--- a/public/style/cadastroUser.css
+++ b/public/style/cadastroUser.css
@@ -12,7 +12,7 @@ body {
     align-items: center;
     justify-content: space-evenly;
     min-height: 100vh;
-    background-color: #161616ee;
+    background-color: #161616ee !important;
     position: relative;
 }
 h1{
@@ -43,15 +43,7 @@ main {
     margin-bottom: 20px;
     position: relative;
 }
-.row{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100%;
-    height: 1px;
-    background-color: rgb(55, 55, 55);
-}
+
 .passoAtual{
     width: 30%;
     display: flex;
@@ -94,7 +86,7 @@ main {
     background-image: linear-gradient(to right, #f0f0f0, white);
     /* background-color: #f0f0f0; */
     width: 90%;
-    min-height: 80vh;
+    min-height: 60vh;
     border-radius: 20px;
     box-shadow: 3px 4px 10px rgba(0, 0, 0, 0.408);
     padding: 20px;
@@ -124,77 +116,7 @@ form {
     gap: 20px;
 }
 
-.doble {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 20px;
-    width: 100%;
-}
 
-.doble input {
-    width: 100%;
-}
-
-.campo {
-    --width-of-input: 100%;
-    --border-height: 1px;
-    --border-before-color: rgba(0, 0, 0, 0.39);
-    --border-after-color: #5891ff;
-    --input-hovered-color: #4985e01f;
-    position: relative;
-    width: var(--width-of-input);
-}
-
-/* styling of Input */
-.input {
-    color: black;
-    font-size: 0.9rem;
-    background-color: transparent;
-    width: 100%;
-    box-sizing: border-box;
-    padding-inline: 0.5em;
-    padding-block: 0.7em;
-    border: none;
-    border-bottom: var(--border-height) solid var(--border-before-color);
-}
-
-/* styling of animated border */
-.input-border {
-    position: absolute;
-    background: var(--border-after-color);
-    width: 0%;
-    height: 2px;
-    bottom: 0;
-    left: 0;
-    transition: 0.3s;
-}
-
-/* Hover on Input */
-input:hover {
-    background: var(--input-hovered-color);
-}
-
-input:focus {
-    outline: none;
-}
-
-
-input:focus~.input-border {
-    width: 100%;
-}
-
-
-.cadButton{
-    width: 100%;
-    font-size: 1.2em;
-    font-weight: bold;
-    border: none;
-    border-radius: 10px;
-    background-color: #5891ff;
-    padding: 5px 7px;
-    cursor: pointer;
-}
 @media screen and (max-width: 1024px) and (min-width: 768px){
     main{
         width: 70%;
